--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:rh-frontend": "node dist/rh-frontend/server/server.mjs"
+    "serve:ssr:rh-frontend": "node dist/rh-frontend/server/server.mjs",
+    "api-gen": "ng-openapi-gen --input ./src/openapi/openapi.yaml --output ./src/app/services"
   },
   "prettier": {
     "overrides": [
@@ -29,8 +30,12 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.3",
+    "@tailwindcss/postcss": "^4.1.11",
     "express": "^5.1.0",
+    "ng-openapi-gen": "^0.53.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
