--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.3",
     "@tailwindcss/postcss": "^4.1.11",
+    "angular-code-input": "^2.0.0",
     "express": "^5.1.0",
     "ng-openapi-gen": "^0.53.0",
     "postcss": "^8.5.6",
