--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.3",
+    "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "angular-code-input": "^2.0.0",
     "express": "^5.1.0",
     "ng-openapi-gen": "^0.53.0",
     "postcss": "^8.5.6",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
